♻️ Apply code improvements and IDE suggestions